--- a/FPRLogoViewer/FPRLogoViewer.csproj
+++ b/FPRLogoViewer/FPRLogoViewer.csproj
@@ -67,28 +67,21 @@
     <Compile Include="AboutBox.Designer.cs">
       <DependentUpon>AboutBox.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form1.cs">
+    <Compile Include="LogoData.cs" />
+    <Compile Include="LogoToolForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
-    </Compile>
-    <Compile Include="LogoDialog.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="LogoDialog.Designer.cs">
-      <DependentUpon>LogoDialog.cs</DependentUpon>
+    <Compile Include="LogoToolForm.Designer.cs">
+      <DependentUpon>LogoToolForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SaveFile_FPR.cs" />
     <EmbeddedResource Include="AboutBox.resx">
       <DependentUpon>AboutBox.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="LogoDialog.resx">
-      <DependentUpon>LogoDialog.cs</DependentUpon>
+    <EmbeddedResource Include="LogoToolForm.resx">
+      <DependentUpon>LogoToolForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
